@@ -465,6 +465,7 @@ Yann Vernier <yann@algonet.se>
 
 David Woodhouse
   file (wave) audio out plugin
+  endian fixes in the pnm and rtsp input plugins
 
 Koos Vriezen <koos.vriezen@xs4all.nl>
   asx ENTRYREF tag handling
